Começando as modificações

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio Kaique B</title>
+    <title>Portfólio Kaique Bifulgo</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
     <!-- ICONE DO SITE -->
@@ -190,10 +190,10 @@
                     <div class="img-port" id="projeto-4">
                         <style>
                             #projeto-4 {
-                                 background-image: url("./img/Blog-Pets.png");
+                                 background-image: url("./img/Quiz.png");
                             }
                         </style>
-                        <div class="nome-projeto"> Projeto <br> Raças de cães</div>
+                        <div class="nome-projeto"> Projeto <br> Quiz feito em react</div>
                     </div>
                     <div class="img-port" id="projeto-5">
                         <style>
@@ -212,8 +212,8 @@
                         <div class="nome-projeto"> Projeto <br> Gerador de Qr Code</div>
                     </div>
                 </div>
-                <a href="https://kaiquebifulgo.github.io/Pagina_com_lazy_loading/" target="_blank" class="links-projetos">
-                    Projeto Blog com lazy loading
+                <a href="https://kaiquebifulgo.github.io/Projeto_Quiz-react/" target="_blank" class="links-projetos">
+                    Projeto quiz feito em react
                 </a>
                 <a href="https://kaiquebifulgo.github.io/Pagina_com_Gerador_de_Senha/" target="_blank" class="links-projetos">
                     Projeto Gerador de senha
