Cards dos projetos feito

--- a/index.html
+++ b/index.html
@@ -150,78 +150,65 @@
         <section id="portfolio">
             <div class="interface">
                 <h2 class="titulos-perso"> MEU <span> PORTFÓLIO. </span> </h2>
-                <div class="flex">
-                    <div class="img-port" id="projeto-1">
-                        <style>
-                            #projeto-1 {
-                                 background-image: url("./img/Projeto-academia.png");
-                            }
-                        </style>
-                        <div class="nome-projeto"> Projeto <br> Montar treinos academia</div>
+
+               <div class="portfolio-grid">
+
+                <div class="projeto-card">
+                    <img src="./img/Projeto-academia.png" alt="Projeto Academia">
+                    <div class="projeto-info">
+                      <h3>Montar Treinos Academia</h3>
+                      <p>App para gerar treinos personalizados, feito com HTML, CSS e JavaScript e também com local storage.</p>
+                      <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank">Ver Projeto</a>
                     </div>
-                    <div class="img-port" id="projeto-2">
-                        <style>
-                            #projeto-2 {
-                                 background-image: url("./img/Blog-Semantico.png");
-                            }
-                        </style>
-                        <div class="nome-projeto"> Projeto <br> Blog Gamer</div>
+                  </div>
+
+                  <div class="projeto-card">
+                    <img src="./img/Quiz.png" alt="Quiz feito em React">
+                    <div class="projeto-info">
+                      <h3>Quiz feito em React</h3>
+                      <p>Aplicação de quiz interativo, desenvolvida com React para uma experiência dinâmica.</p>
+                      <a href="https://kaiquebifulgo.github.io/Projeto_Quiz-react/" target="_blank">Ver Projeto</a>
                     </div>
-                    <div class="img-port" id="projeto-3">
-                        <style>
-                            #projeto-3 {
-                                background-image: url("./img/Projeto-Box.png");
-                            }
-                        </style>
-                        <div class="nome-projeto"> Projeto <br> Criador de box shadow</div>
+                  </div>
+            
+                  <div class="projeto-card">
+                    <img src="./img/Blog-Semantico.png" alt="Blog Gamer">
+                    <div class="projeto-info">
+                      <h3>Blog Gamer</h3>
+                      <p>Blog semântico com estrutura acessível. Foco em HTML5 e semântica.</p>
+                      <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank">Ver Projeto</a>
                     </div>
-                </div>
-                <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank" class="links-projetos">
-                    Projeto para montar treinos
-                </a>
-                <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank" class="links-projetos">
-                    Projeto blog semantico
-                </a>
-                <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank" class="links-projetos">
-                    Projeto gerador de box shadow
-                </a>
-                  <div class="interface">
-                <div class="flex">
-                    <div class="img-port" id="projeto-4">
-                        <style>
-                            #projeto-4 {
-                                 background-image: url("./img/Quiz.png");
-                            }
-                        </style>
-                        <div class="nome-projeto"> Projeto <br> Quiz feito em react</div>
+                  </div>
+
+                  <div class="projeto-card">
+                    <img src="./img/Projeto-Box.png" alt="Criador de Box Shadow">
+                    <div class="projeto-info">
+                      <h3>Criador de Box Shadow</h3>
+                      <p>Ferramenta para gerar box shadows personalizados, feita com HTML, CSS e JavaScript.</p>
+                      <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank">Ver Projeto</a>
                     </div>
-                    <div class="img-port" id="projeto-5">
-                        <style>
-                            #projeto-5 {
-                                 background-image: url("./img/Gerador-de-senha.png");
-                            }
-                        </style>
-                        <div class="nome-projeto"> Projeto <br> Gerador de senha</div>
+                  </div>
+
+                  <div class="projeto-card">
+                    <img src="./img/Gerador-de-senha.png" alt="Gerador de Senha">
+                    <div class="projeto-info">
+                      <h3>Gerador de Senha</h3>
+                      <p>Ferramenta para criar senhas seguras, utilizando HTML, CSS e JavaScript.</p>
+                      <a href="https://kaiquebifulgo.github.io/Pagina_com_Gerador_de_Senha/" target="_blank">Ver Projeto</a>
                     </div>
-                    <div class="img-port" id="projeto-6">
-                        <style>
-                            #projeto-6 {
-                                background-image: url("./img/Gerador-qr-code.png");
-                            }
-                        </style>
-                        <div class="nome-projeto"> Projeto <br> Gerador de Qr Code</div>
+                  </div>
+
+                  <div class="projeto-card">
+                    <img src="./img/Gerador-qr-code.png" alt="Gerador de QR Code">
+                    <div class="projeto-info">
+                      <h3>Gerador de QR Code</h3>
+                      <p>Aplicação para gerar QR Codes personalizados, feita com HTML, CSS e JavaScript.</p>
+                      <a href="https://kaiquebifulgo.github.io/Gerador_QR-Code/" target="_blank">Ver Projeto</a>
                     </div>
-                </div>
-                <a href="https://kaiquebifulgo.github.io/Projeto_Quiz-react/" target="_blank" class="links-projetos">
-                    Projeto quiz feito em react
-                </a>
-                <a href="https://kaiquebifulgo.github.io/Pagina_com_Gerador_de_Senha/" target="_blank" class="links-projetos">
-                    Projeto Gerador de senha
-                </a>
-                <a href="https://kaiquebifulgo.github.io/Gerador_QR-Code/" target="_blank" class="links-projetos">
-                    Projeto gerador de Qr-code
-                </a>
-            </div>
+                  </div>
+
+               </div>
+
         </section>
         <!-- FIM DA QUARTA SECTION -->
         <!-- COMEÇO DA QUINTA SECTION -->
@@ -252,7 +239,7 @@
                 </div>
             </div>
             <div class="rodape-baixo">
-                <p>Meus agradecimentos &copy;Kaique Bifulgo - 2024</p>
+                <p>Meus agradecimentos &copy;Kaique Bifulgo - 2025</p>
             </div>
         </div>
      </footer>
