Editando parte nova da sessão portfolio

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfólio de Kaique Bifulgo, desenvolvedor front-end com projetos em HTML, CSS, JavaScript e React.">
     <title>Portfólio Kaique Bifulgo</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
@@ -159,6 +160,7 @@
                       <h3>Montar Treinos Academia</h3>
                       <p>App para gerar treinos personalizados, feito com HTML, CSS e JavaScript e também com local storage.</p>
                       <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank">Ver Projeto</a>
+                      <a href="https://github.com/KaiqueBifulgo/Todo_montar_treino_academia" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
@@ -168,6 +170,7 @@
                       <h3>Quiz feito em React</h3>
                       <p>Aplicação de quiz interativo, desenvolvida com React para uma experiência dinâmica.</p>
                       <a href="https://kaiquebifulgo.github.io/Projeto_Quiz-react/" target="_blank">Ver Projeto</a>
+                      <a href="https://github.com/KaiqueBifulgo/Projeto_Quiz-react" target="_blank">Ver Código</a>
                     </div>
                   </div>
             
@@ -177,6 +180,7 @@
                       <h3>Blog Gamer</h3>
                       <p>Blog semântico com estrutura acessível. Foco em HTML5 e semântica.</p>
                       <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank">Ver Projeto</a>
+                      <a href="https://github.com/KaiqueBifulgo/Blog_1" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
@@ -186,6 +190,7 @@
                       <h3>Criador de Box Shadow</h3>
                       <p>Ferramenta para gerar box shadows personalizados, feita com HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank">Ver Projeto</a>
+                      <a href="https://github.com/KaiqueBifulgo/Gerador_de_Box_Shadow" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
@@ -195,6 +200,7 @@
                       <h3>Gerador de Senha</h3>
                       <p>Ferramenta para criar senhas seguras, utilizando HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Pagina_com_Gerador_de_Senha/" target="_blank">Ver Projeto</a>
+                      <a href="https://github.com/KaiqueBifulgo/Pagina_com_Gerador_de_Senha" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
@@ -204,6 +210,7 @@
                       <h3>Gerador de QR Code</h3>
                       <p>Aplicação para gerar QR Codes personalizados, feita com HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Gerador_QR-Code/" target="_blank">Ver Projeto</a>
+                      <a href="https://github.com/KaiqueBifulgo/Gerador_QR-Code" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
