Toques adicionais de css na parte de portfolio

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="skills-box">
                         <i class="fa-solid fa-book"></i>
-                        <h3>Curioso em</h3>
+                        <h3>Sobre</h3>
                         <p>
                             Apaixonado por aprender novas tecnologias e ferramentas que possam aprimorar minhas habilidades como 
                             desenvolvedor. Cada nova tecnologia é uma oportunidade de expandir meu conhecimento
@@ -160,7 +160,7 @@
                       <h3>Montar Treinos Academia</h3>
                       <p>App para gerar treinos personalizados, feito com HTML, CSS e JavaScript e também com local storage.</p>
                       <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Todo_montar_treino_academia" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Todo_montar_treino_academia" class="btn-ver_codigo" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
@@ -170,7 +170,7 @@
                       <h3>Quiz feito em React</h3>
                       <p>Aplicação de quiz interativo, desenvolvida com React para uma experiência dinâmica.</p>
                       <a href="https://kaiquebifulgo.github.io/Projeto_Quiz-react/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Projeto_Quiz-react" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Projeto_Quiz-react" class="btn-ver_codigo" target="_blank">Ver Código</a>
                     </div>
                   </div>
             
@@ -180,7 +180,7 @@
                       <h3>Blog Gamer</h3>
                       <p>Blog semântico com estrutura acessível. Foco em HTML5 e semântica.</p>
                       <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Blog_1" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Blog_1" class="btn-ver_codigo" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
@@ -190,7 +190,7 @@
                       <h3>Criador de Box Shadow</h3>
                       <p>Ferramenta para gerar box shadows personalizados, feita com HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Gerador_de_Box_Shadow" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Gerador_de_Box_Shadow" class="btn-ver_codigo" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
@@ -200,7 +200,7 @@
                       <h3>Gerador de Senha</h3>
                       <p>Ferramenta para criar senhas seguras, utilizando HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Pagina_com_Gerador_de_Senha/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Pagina_com_Gerador_de_Senha" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Pagina_com_Gerador_de_Senha" class="btn-ver_codigo" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
@@ -210,7 +210,7 @@
                       <h3>Gerador de QR Code</h3>
                       <p>Aplicação para gerar QR Codes personalizados, feita com HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Gerador_QR-Code/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Gerador_QR-Code" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Gerador_QR-Code" class="btn-ver_codigo" target="_blank">Ver Código</a>
                     </div>
                   </div>
 
