Arrumando textos e corrigindo bugs visuais

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <button class="btn-projetos">Ir para os projetos!</button>
                         </a>
                         <a href="./pdfs/CV_Kaique_front.pdf" download="Cv_KaiqueBifulgo" class="btn-baixar-cv"> 
-                            <button class="btn-baixar-cv">Baixar Cv!</button>
+                            <button class="btn-baixar-cv">Baixar CV!</button>
                         </a>
                     </div>
                     <div class="foto-principal">
@@ -85,7 +85,7 @@
          <!-- COMEÇO DA SEGUNDA SECTION -->
         <section id="skills">
             <div class="interface">
-                <h2 class="titulos-perso">Meus <span>diferenciais</span>!</h2>
+                <h2 class="titulos-perso">O que me <span>destaca</span>!</h2>
                 <div class="flex">
                     <div class="skills-box">
                         <i class="fa-solid fa-laptop-code"></i>
@@ -93,7 +93,7 @@
                         <p>
                             Tenho experiência em desenvolvimento Front-End com HTML, CSS e JavaScript,
                             criando interfaces interativas e responsivas. Utilizo React para construir aplicações 
-                            modernas e escaláveis.Além disso, sou familiarizado com o uso de Linux como ambiente de desenvolvimento, 
+                            modernas e escaláveis. Além disso, sou familiarizado com o uso de Linux como ambiente de desenvolvimento, 
                             utilizando ferramentas de linha de comando para otimizar meu fluxo de trabalho.
                         </p>
                     </div>
@@ -111,7 +111,8 @@
                         <h3>Sobre</h3>
                         <p>
                             Apaixonado por aprender novas tecnologias e ferramentas que possam aprimorar minhas habilidades como 
-                            desenvolvedor. Cada nova tecnologia é uma oportunidade de expandir meu conhecimento
+                            desenvolvedor. Vejo cada nova tecnologia como uma chance de refinar minhas habilidades e criar experiências 
+                            mais impactantes para o usuário.
                         </p>
                     </div>
                 </div>  
@@ -139,8 +140,8 @@
                             um bom projeto é equilibrar a estética com a funcionalidade, criando soluções intuitivas e agradáveis.
                         </p>
                         <div class="social">
-                            <a href="https://github.com/KaiqueBifulgo" target="_blank"> <button> <i class="fa-brands fa-github"></i> </button> </a>
-                            <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank"> <button> <i class="fa-brands fa-linkedin"></i> </button> </a>
+                            <a href="https://github.com/KaiqueBifulgo" target="_blank" rel="noopener noreferrer"> <button aria-label="Link para o github"> <i class="fa-brands fa-github"></i> </button> </a>
+                            <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank" rel="noopener noreferrer"> <button aria-label="Link para o linkedin"> <i class="fa-brands fa-linkedin"></i> </button> </a>
                         </div>
                     </div>
                 </div>
@@ -160,7 +161,7 @@
                       <h3>Montar Treinos Academia</h3>
                       <p>App para gerar treinos personalizados, feito com HTML, CSS e JavaScript e também com local storage.</p>
                       <a href="https://kaiquebifulgo.github.io/Todo_montar_treino_academia/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Todo_montar_treino_academia" class="btn-ver_codigo" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Todo_montar_treino_academia" class="btn-ver_codigo" target="_blank" rel="noopener noreferrer">Ver Código</a>
                     </div>
                   </div>
 
@@ -170,7 +171,7 @@
                       <h3>Quiz feito em React</h3>
                       <p>Aplicação de quiz interativo, desenvolvida com React para uma experiência dinâmica.</p>
                       <a href="https://kaiquebifulgo.github.io/Projeto_Quiz-react/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Projeto_Quiz-react" class="btn-ver_codigo" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Projeto_Quiz-react" class="btn-ver_codigo" target="_blank" rel="noopener noreferrer">Ver Código</a>
                     </div>
                   </div>
             
@@ -180,7 +181,7 @@
                       <h3>Blog Gamer</h3>
                       <p>Blog semântico com estrutura acessível. Foco em HTML5 e semântica.</p>
                       <a href="https://kaiquebifulgo.github.io/Blog_1/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Blog_1" class="btn-ver_codigo" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Blog_1" class="btn-ver_codigo" target="_blank" rel="noopener noreferrer">Ver Código</a>
                     </div>
                   </div>
 
@@ -190,7 +191,7 @@
                       <h3>Criador de Box Shadow</h3>
                       <p>Ferramenta para gerar box shadows personalizados, feita com HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Gerador_de_Box_Shadow/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Gerador_de_Box_Shadow" class="btn-ver_codigo" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Gerador_de_Box_Shadow" class="btn-ver_codigo" target="_blank" rel="noopener noreferrer">Ver Código</a>
                     </div>
                   </div>
 
@@ -200,7 +201,7 @@
                       <h3>Gerador de Senha</h3>
                       <p>Ferramenta para criar senhas seguras, utilizando HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Pagina_com_Gerador_de_Senha/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Pagina_com_Gerador_de_Senha" class="btn-ver_codigo" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Pagina_com_Gerador_de_Senha" class="btn-ver_codigo" target="_blank" rel="noopener noreferrer">Ver Código</a>
                     </div>
                   </div>
 
@@ -210,7 +211,7 @@
                       <h3>Gerador de QR Code</h3>
                       <p>Aplicação para gerar QR Codes personalizados, feita com HTML, CSS e JavaScript.</p>
                       <a href="https://kaiquebifulgo.github.io/Gerador_QR-Code/" target="_blank">Ver Projeto</a>
-                      <a href="https://github.com/KaiqueBifulgo/Gerador_QR-Code" class="btn-ver_codigo" target="_blank">Ver Código</a>
+                      <a href="https://github.com/KaiqueBifulgo/Gerador_QR-Code" class="btn-ver_codigo" target="_blank" rel="noopener noreferrer">Ver Código</a>
                     </div>
                   </div>
 
@@ -224,8 +225,8 @@
                 <h2 class="titulos-perso">MINHAS REDES E <span>CONTATOS</span></h2>
                 <div class="interface">
                     <div class="table">
-                        <p> Quer ver meu github?<a href="https://github.com/KaiqueBifulgo" target="_blank"> Clique aqui!!</a> </p>
-                        <p> Quer acessar meu Linkedin? <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank"> Clique aqui!!</a></p>
+                        <p> Quer ver meu github?<a href="https://github.com/KaiqueBifulgo" target="_blank" rel="noopener noreferrer"> Clique aqui!!</a> </p>
+                        <p> Quer acessar meu Linkedin? <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank" rel="noopener noreferrer"> Clique aqui!!</a></p>
                     </div>
                 </div>
             </div>
@@ -240,8 +241,8 @@
                     </div>
                     <!-- FIM DA DIV LOGO -->
                      <div class="social">
-                        <a href="https://github.com/KaiqueBifulgo" target="_blank"> <button> <i class="fa-brands fa-github"></i> </button> </a>
-                        <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank"> <button> <i class="fa-brands fa-linkedin"></i> </button> </a>
+                        <a href="https://github.com/KaiqueBifulgo" target="_blank" rel="noopener noreferrer"> <button aria-label="Link para o github"> <i class="fa-brands fa-github"></i> </button> </a>
+                        <a href="https://www.linkedin.com/in/KaiqueBifulgo" target="_blank" rel="noopener noreferrer"> <button aria-label="Link para o linkedin"> <i class="fa-brands fa-linkedin"></i> </button> </a>
                      </div>
                 </div>
             </div>
